force-app/main/default/objects/New_Product_Addition__c/New_Product_Addition__c.object-meta.xml
<CustomObject>
    <label>New Product Addition</label>
    <nameField>
        <displayFormat>NPA-{0000}</displayFormat>
        <label>New Product Addition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Product Additions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>