force-app/main/default/objects/New_Product_Addition__c/fields/BOM_Cost__c.field-meta.xml
<CustomField>
    <fullName>BOM_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BOM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>