force-app/main/default/objects/New_Product_Addition__c/fields/Dimensions_cm3__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_cm3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dimensions (cm3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>