force-app/main/default/objects/New_Product_Addition__c/fields/Geo_Availability__c.field-meta.xml
<CustomField>
    <fullName>Geo_Availability__c</fullName>
    <label>Geo Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>