force-app/main/default/objects/New_Product_Addition__c/fields/Lauched_EA_Date__c.field-meta.xml
<CustomField>
    <fullName>Lauched_EA_Date__c</fullName>
    <label>Lauched EA Date</label>
    <type>DateTime</type>
</CustomField>