force-app/main/default/objects/New_Product_Addition__c/fields/Launched_GA_Date__c.field-meta.xml
<CustomField>
    <fullName>Launched_GA_Date__c</fullName>
    <label>Launched GA Date</label>
    <type>DateTime</type>
</CustomField>