force-app/main/default/objects/New_Product_Addition__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <type>TextArea</type>
</CustomField>