force-app/main/default/objects/New_Product_Addition__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>New Product Additions</relationshipLabel>
    <relationshipName>New_Product_Additions</relationshipName>
    <type>Lookup</type>
</CustomField>