force-app/main/default/objects/New_Product_Addition__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product SKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>