force-app/main/default/objects/New_Product_Addition__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Telematics</fullName>
            </value>
            <value>
                <fullName>Connected Sites</fullName>
            </value>
            <value>
                <fullName>Connected Worker</fullName>
                <isActive>false</isActive>
                <label>Connected Worker</label>
            </value>
            <value>
                <fullName>Core Fleet</fullName>
                <isActive>false</isActive>
                <label>Core Fleet</label>
            </value>
            <value>
                <fullName>Family</fullName>
                <isActive>false</isActive>
                <label>Family</label>
            </value>
            <value>
                <fullName>Industrial 4.0</fullName>
                <isActive>false</isActive>
                <label>Industrial 4.0</label>
            </value>
            <value>
                <fullName>Machine Vision</fullName>
                <isActive>false</isActive>
                <label>Machine Vision</label>
            </value>
            <value>
                <fullName>Samsara Brand</fullName>
                <isActive>false</isActive>
                <label>Samsara Brand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>