force-app/main/default/objects/New_Product_Addition__c/fields/Product_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary PM&apos;s manager, and the final approver for the SKU.</inlineHelpText>
    <label>Product Group Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Product_Additions1</relationshipName>
    <type>Lookup</type>
</CustomField>