force-app/main/default/objects/New_Product_Addition__c/fields/Product_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Short_Name__c</fullName>
    <label>Deprecated on Nov5th Product Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>