force-app/main/default/objects/New_Product_Addition__c/fields/Readable_Name__c.field-meta.xml
<CustomField>
    <fullName>Readable_Name__c</fullName>
    <label>Deprecated on Nov5th Readable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>