force-app/main/default/objects/New_Product_Addition__c/fields/Revenue_Recognition_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Type__c</fullName>
    <label>Revenue Recognition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contract Term</fullName>
            </value>
            <value>
                <fullName>Default One-Time Direct Posting</fullName>
            </value>
            <value>
                <fullName>Default Standard</fullName>
            </value>
            <value>
                <fullName>Direct Samsara</fullName>
            </value>
            <value>
                <fullName>RMA Fulfillment</fullName>
            </value>
            <value>
                <fullName>Samsara Standard</fullName>
            </value>
            <value>
                <fullName>Standard Ratable</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Upon Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>