force-app/main/default/objects/New_Product_Addition__c/fields/Standard_Price_MXN__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_MXN__c</fullName>
    <label>Standard Annual Price (MXN)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>