force-app/main/default/objects/New_Product_Addition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Initiated</fullName>
                <default>true</default>
                <label>Product Initiated</label>
            </value>
            <value>
                <fullName>Back Office Processing</fullName>
            </value>
            <value>
                <fullName>Ready to Approve</fullName>
            </value>
            <value>
                <fullName>Pending Product Ops Review</fullName>
            </value>
            <value>
                <fullName>Pending Finance Approval</fullName>
                <label>Pending Biz Systems - Finance Approval</label>
            </value>
            <value>
                <fullName>Pending NPI Approval</fullName>
            </value>
            <value>
                <fullName>Pending Supply Chain Approval</fullName>
            </value>
            <value>
                <fullName>Pending Product Approval</fullName>
            </value>
            <value>
                <fullName>Product Creation</fullName>
            </value>
            <value>
                <fullName>Ready to Launch</fullName>
            </value>
            <value>
                <fullName>Launched EA</fullName>
            </value>
            <value>
                <fullName>Launched GA</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Pending Sales Ops Approval</fullName>
            </value>
            <value>
                <fullName>Finance Processing</fullName>
                <isActive>false</isActive>
                <label>Finance Processing</label>
            </value>
            <value>
                <fullName>NPI Processing</fullName>
                <isActive>false</isActive>
                <label>NPI Processing</label>
            </value>
            <value>
                <fullName>Supply Chain Processing</fullName>
                <isActive>false</isActive>
                <label>Supply Chain Processing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>