force-app/main/default/objects/New_Product_Addition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>SKU Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Kit/Package</fullName>
                <isActive>false</isActive>
                <label>Kit/Package</label>
            </value>
            <value>
                <fullName>Serialized Hardware</fullName>
                <isActive>false</isActive>
                <label>Serialized Hardware</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>