force-app/main/default/objects/New_Product_Addition__c/fields/Weight_oz__c.field-meta.xml
<CustomField>
    <fullName>Weight_oz__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Weight (oz)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>