force-app/main/default/objects/New_Product_Addition__c/validationRules/SKU_HW.validationRule-meta.xml
<ValidationRule>
    <fullName>SKU_HW</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CONTAINS( Product_Code__c, &quot;HW&quot;),
ISBLANK( Associated_Product_ID__c )
)</errorConditionFormula>
    <errorMessage>If SKU starts with &quot;HW&quot; then &quot;associated product ID&quot; is mandatory</errorMessage>
</ValidationRule>