force-app/main/default/objects/New_Product_Addition__c/validationRules/Weight_and_Dimensions_Required_for_HW.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_and_Dimensions_Required_for_HW</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Status__c) = &apos;Ready to Approve&apos;,
OR(
ISBLANK(Weight_oz__c),
ISBLANK(Dimensions_cm3__c)
)
)</errorConditionFormula>
    <errorMessage>Weight and Dimensions must be filled out for hardware products before submitting for approval .</errorMessage>
</ValidationRule>