force-app/main/default/objects/New_Product_Addition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Product_Approval_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>